versions/v1.2.0/modules/en/pages/architecture.adoc
= Architecture
:description: Learn about K3s virtual cluster architecture, including shared mode, Virtual HCP, and how K3s functions as the control plane
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-08-06
:page-revdate: {revdate}

Virtual Clusters are isolated Kubernetes clusters provisioned on a physical cluster. K3k leverages link:https://k3s.io/[K3s] as the control plane of the Kubernetes cluster because of its lightweight footprint.

K3k provides three modes for deploying virtual clusters:
- Shared (default)
- Virtual
- HCP (Hosted Control Plane) -- experimental

== Shared Mode

The default *shared* mode uses a K3s server as control plane with an https://docs.k3s.io/advanced#running-agentless-servers-experimental[agentless servers configuration]. With this option enabled, the servers do not run the kubelet, container runtime, or CNI. The server uses a https://virtual-kubelet.io/[Virtual Kubelet] provider implementation specific to K3k, which schedules the workloads and other eventually needed resources on the host cluster. This K3k Virtual Kubelet provider handles the reflection of resources and workload execution within the shared host cluster environment.

image::architecture/shared-mode.png[Shared Mode]

=== Networking and Storage

Because of this shared infrastructure, the CNI is the same as the one configured in the host cluster. The same goes for the available storage where the Storage Classes and Volumes are those of the host cluster. 

To provide the needed isolation, K3k leverages Network Policies.

=== Resource Synchronization

In shared mode, specific resources must be synchronized between the virtual cluster (child) and the host cluster (parent) to allow workloads to execute correctly. This synchronization is handled under the hood by the K3k Virtual Kubelet.

*Synchronized Resources*

By default, the following resources created in the virtual cluster are automatically synced to the host cluster:

* ConfigMaps
* Secrets
* Services
* PersistentVolumeClaims (PVCs)

Additionally, synchronization for the following resources is supported but disabled by default:

* Ingresses
* PriorityClasses

*Configuration*

You can configure resource synchronization within your virtual cluster's Cluster Custom Resource (CR) under the `spec.sync` field. Each supported resource type includes a selector field to filter which resources get synced by label.

*Storage and Persistent Volume Claims (PVCs)*

When a user creates a PVC inside the virtual cluster, the PVC is automatically synced to the host cluster. The process works as follows:

*StorageClass Dependency*: If the PVC in the virtual cluster references a StorageClass, that StorageClass must already exist on the host cluster. If it does not exist on the host side, the PVC fails to bind to a dynamically created PV. 

[NOTE]
====
Currently, K3k does not sync StorageClasses between the host and virtual cluster, though this behavior is planned for a future release.
====

*Pseudo-Volume Creation*: When the PVC successfully syncs to the host cluster, the k3k-kubelet automatically generates a "pseudo" PersistentVolume (PV) inside the virtual cluster.

*Pod Scheduling*: The pseudo PersistentVolume is bound to the virtual cluster's PVC, enabling the volume to be ready for the consumer pods to be scheduled immediately. However, the physical volume provisioning happens entirely on the host cluster.

For more information, see xref:./resource-sync.adoc[Resource Sync].

=== Resource Sharing and Limits

In *shared* mode, K3k leverages Kubernetes 'ResourceQuotas' and 'LimitRanges' to manage resource sharing and enforce limits. Since all virtual cluster workloads run within the same namespace on the host cluster, ResourceQuotas are applied to this namespace to limit the total resources consumed by a virtual cluster. LimitRanges are used to set default resource requests and limits for pods, ensuring that workloads have reasonable resource allocations even if they do not explicitly specify them.

Each pod in a virtual cluster is assigned a unique name that incorporates the pod name, namespace and cluster name. This prevents naming collisions in the shared host cluster namespace.

It is important to understand that ResourceQuotas are applied at the namespace level. This means that all pods within a virtual cluster share the same quota. While this provides overall limits for the virtual cluster, it also means that resource allocation is dynamic. If one workload is not using its full resource allocation, other workloads within the _same_ virtual cluster can utilize those resources, even if they belong to different deployments or services.

This dynamic sharing can be both a benefit and a challenge. It allows for efficient resource utilization, but it can also lead to unpredictable performance if workloads have varying resource demands. Furthermore, this approach makes it difficult to guarantee strict resource isolation between workloads within the same virtual cluster.

NOTE: GPU resource sharing is an area of ongoing investigation. K3k is actively exploring potential solutions in this area.

=== Isolation and Security

Isolation between virtual clusters in shared mode relies heavily on Kubernetes Network Policies. Network Policies define rules that control the network traffic allowed to and from pods. K3k configures Network Policies to ensure that pods in one virtual cluster cannot communicate with pods in other virtual clusters or with pods in the host cluster itself, providing a strong foundation for network isolation.

While Network Policies offer robust isolation capabilities, it is important to understand their characteristics:

* *CNI Integration:* Network Policies integrate seamlessly with supported CNI plugins. K3k leverages this integration to enforce network isolation.

* *Granular Control:* Network Policies provide granular control over network traffic, allowing for fine-tuned security policies.

* *Scalability:* Network Policies scale well with the number of virtual clusters and applications, ensuring consistent isolation as the environment grows.

K3k also utilizes Kubernetes Pod Security Admission (PSA) to enforce security policies within virtual clusters based on Pod Security Standards (PSS). PSS define different levels of security for pods, restricting what actions pods can perform. By configuring PSA to enforce a specific PSS level (for example, `baseline` or `restricted`) for a virtual cluster, K3k ensures that pods adhere to established security best practices and prevents them from using privileged features or performing potentially dangerous operations.

Key aspects of PSA integration include:

* *Namespace-Level Enforcement:* PSA configuration is applied at the namespace level, providing a consistent security posture for all pods within the virtual cluster.
* *Standardized Profiles:* PSS offers a set of predefined security profiles aligned with industry best practices, simplifying security configuration and ensuring a baseline level of security.

The shared mode architecture is designed with security in mind. K3k employs multiple layers of security controls, including Network Policies and PSA, to protect virtual clusters and the host cluster. While the shared namespace model requires careful configuration and management, these controls provide a robust security foundation for running workloads in a multi-tenant environment. K3k continuously evaluates and enhances its security mechanisms to address evolving threats and ensure the highest level of protection for its users.

== Virtual Mode

The `virtual` mode in K3k deploys fully functional K3s clusters (including both server and agent components) as virtual clusters. These K3s clusters run as pods within the host cluster. Each virtual cluster has its own dedicated K3s server and one or more K3s agents acting as worker nodes. This approach provides strong isolation, as each virtual cluster operates independently with its own control plane and worker nodes. While these virtual clusters run as pods on the host cluster, they function as complete and separate Kubernetes environments.

image::architecture/virtual-mode.png[Virtual Mode]

=== Networking and Storage

Virtual clusters in `virtual` mode each have their own independent networking configuration managed by their respective K3s servers. Each virtual cluster runs its own CNI plugin, configured within its K3s server, providing complete network isolation from other virtual clusters and the host cluster. While the virtual cluster networks ultimately operate on top of the host cluster's network infrastructure, the networking configuration and traffic management are entirely separate.

=== Resource Sharing and Limits

Resource sharing in `virtual` mode is managed by applying resource limits to the pods that make up the virtual cluster (both the K3s server pod and the K3s agent pods). Each pod is assigned a specific amount of CPU, memory, and other resources. The workloads running _within_ the virtual cluster then utilize these allocated resources. This means that the virtual cluster as a whole has a defined resource pool determined by the limits on its constituent pods.

This approach provides a clear and direct way to control the resources available to each virtual cluster. However, it requires careful resource planning to ensure that each virtual cluster has sufficient capacity for its workloads.

=== Isolation and Security

The `virtual` mode offers more isolation than `shared` mode due to the dedicated K3s clusters deployed for each virtual cluster. Because each virtual cluster runs its own separate control plane and worker nodes, workloads are effectively isolated from each other and from the host cluster. This architecture minimizes the risk of one virtual cluster impacting others or the host cluster.

Currently, `virtual` mode runs the server and agent pods with a `Privileged` securityContext to allow the kubelet and other components to function properly. As a result of this drawback, any pod that is privileged inside a virtual cluster also holds full privileges on the real host node.

Pod Security Admission configured _inside_ a virtual cluster is administered by the owner of that virtual cluster, who can relax or remove it. It restricts the workloads of that cluster; it does not protect the host cluster from the owner of the virtual cluster.

To close this gap, however, the server and agent pods can be run under a sandboxed runtime by setting `runtimeClassName` on the `Cluster` (or on a `VirtualClusterPolicy`, to apply it to every cluster in the bound Namespaces):

[,yaml]
----
apiVersion: k3k.io/v1beta1
kind: Cluster
metadata:
  name: my-cluster
spec:
  mode: virtual
  runtimeClassName: kata-qemu
----

Runtimes such as link:https://katacontainers.io/[Kata Containers], which runs each pod in a lightweight VM, or link:https://github.com/nestybox/sysbox[Sysbox] provide a kernel or hardware boundary between the virtual cluster and the host node. Support for these runtimes is experimental; see xref:./how-tos-for-admin/custom-runtime-class.adoc[Using a Custom Container Runtime] for a full setup walkthrough.

Beyond that, standard Kubernetes security best practices still apply, and K3k emphasizes a layered security approach. K3k recommends minimizing the privileges of the virtual cluster pods whenever possible and adhering to the principle of least privilege; `securityContext` and `podSecurityContext` on the `Cluster` can be used to override the defaults, keeping in mind that the nested kubelet and container runtime require most of these privileges to function. Further information on K3s security best practices can be found in the official K3s documentation: https://docs.k3s.io/security (This link provides general security guidance, including discussions of capabilities and other relevant topics).

== HCP Mode

[NOTE] 
====
HCP mode is *experimental* in {product-name} v1.2.0.
====

The `hcp` (Hosted Control Plane) mode runs an agentless K3s control plane (apiserver, scheduler, controller-manager) as pods inside the host cluster, but unlike `virtual` mode it does *not* provision any worker pods. Worker nodes live outside the host cluster -- on bare metal, virtual machines, or edge devices that you manage -- and join the virtual cluster using the standard K3s installer (`curl -sfL https://get.k3s.io | K3S_URL=... K3S_TOKEN=... sh -`).

// TODO: add image::architecture/hcp-mode.png[HCP Mode] once the diagram is available

This mode gives you the operational convenience of a K3k-managed control plane combined with real, fully-isolated worker nodes. To make the apiserver reachable from outside the host cluster, an HCP cluster requires an externally reachable endpoint (`spec.expose.nodePort`, `spec.expose.loadBalancer`, or `spec.expose.ingress`) and a non-loopback entry in `spec.tlsSANs`.

=== Networking and Storage

Because the control plane runs in the host cluster but workers live outside it, the apiserver has no direct route to the virtual cluster's pod CIDR. K3k tunnels apiserver egress (used by webhooks, log/exec, and similar features) through the k3s-agent WebSocket connection. The in-cluster apiserver endpoint reconciler is disabled and K3k owns the `default/kubernetes` Endpoints and EndpointSlice in the virtual cluster, pointing them at the externally reachable host:port.

Workers run a standard K3s agent, so the CNI, the container runtime, and the storage available on each worker are those configured at install time on the worker itself -- the host cluster's CNI and storage are not involved.

=== Resource Sharing and Limits

The control plane consumes resources on the host cluster, and standard pod-level limits apply to the K3s server pods. Workloads scheduled by the virtual cluster consume resources on the *external* worker nodes, completely outside the host cluster's quota and limit accounting.

=== Isolation and Security

HCP mode provides strong workload isolation by construction: tenant workloads never run on the host cluster. The control plane pods still run in the host cluster, but no Virtual Kubelet or k3s-agent surface is exposed for those tenants on the host.

Because external workers join over the network, the security of an HCP cluster depends on the reachability and authentication of the apiserver endpoint. The join token is stored as a Secret in the virtual cluster's namespace and is not embedded in CLI output; treat it as a credential.

== K3k Components

K3k consists of two main components:

* *Controller:* The K3k controller is a core component that runs on the host cluster. It watches for `Cluster` custom resources (CRs) and manages the lifecycle of virtual clusters. When a new `Cluster` CR is created, the controller provisions the necessary resources, including namespaces, K3s server and agent pods, and network configurations, to create the virtual cluster.

* *CLI:* The K3k CLI provides a command-line interface for interacting with K3k. It allows users to easily create, manage, and access virtual clusters. The CLI simplifies common tasks such as creating `Cluster` CRs, retrieving kubeconfigs for accessing virtual clusters, and performing other management operations.

== VirtualClusterPolicy

K3k introduces the VirtualClusterPolicy Custom Resource, a way to set up and apply common configurations and how your virtual clusters operate within the K3k environment.

The primary goal of VCPs is to allow administrators to centrally manage and apply consistent policies. This reduces repetitive configuration, helps meet organizational standards, and enhances the security and operational consistency of virtual clusters managed by K3k.

A VirtualClusterPolicy is bound to one or more Kubernetes Namespaces. Once bound, the rules defined in the VCP apply to all K3k virtual clusters that are running or get created in that Namespace. This allows for flexible policy application, meaning different Namespaces can use their own unique VCPs, while others can share a single VCP for a consistent setup.

Common use cases for administrators leveraging VirtualClusterPolicy include:

* Defining the operational mode (like "shared" or "virtual") for virtual clusters.
* Setting up resource quotas and limit ranges to effectively manage how much resources virtual clusters and their workloads can use.
* Enforcing security standards, for example, by configuring Pod Security Admission (PSA) labels for Namespaces.

The K3k controller actively monitors VirtualClusterPolicy resources and the corresponding Namespace bindings. When a VCP is applied or updated, the controller ensures that the defined configurations are enforced on the relevant virtual clusters and their associated resources within the targeted Namespaces.

For a deep dive into what VirtualClusterPolicy can do, along with more examples, check out the xref:./virtualclusterpolicy.adoc[VirtualClusterPolicy Concepts] page. For a full list of all the spec fields, see the link:./crds/crd-docs.adoc#virtualclusterpolicy[API Reference for VirtualClusterPolicy].

== Comparison and Trade-offs

K3k offers three distinct modes for deploying virtual clusters: `shared`, `virtual`, and `hcp`. Each mode has its own strengths and weaknesses, and the best choice depends on the specific needs and priorities of the user. Here's a comparison to help you make an informed decision:

|===
| Feature | Shared Mode | Virtual Mode | HCP Mode

| *Architecture*
| Agentless K3s server with Virtual Kubelet
| Full K3s cluster (server and agents) as pods
| Agentless K3s control plane in the host cluster + user-supplied external workers

| *Isolation*
| Network Policies
| Dedicated control plane and worker nodes as pods
| Dedicated control plane pods + workers fully outside the host cluster

| *Resource Sharing*
| Dynamic, namespace-level ResourceQuotas
| Resource limits on virtual cluster pods
| Control plane uses host cluster resources; workload resources come from external nodes

| *Networking*
| Host cluster's CNI
+
Host cluster's Ingress Controller (option)
| Virtual cluster's own CNI
+
Virtual cluster's own Ingress Controller
| Worker node's own CNI
+
External apiserver endpoint via NodePort/LoadBalancer/Ingress

| *Storage*
| Host cluster's storage
| Bring your own storage provider
| Storage configured on the external worker nodes

| *Security*
| Pod Security Admission (PSA), Network Policies
| Inherent isolation, PSA, Network Policies
| Strong workload isolation (tenant workloads never run on the host); apiserver exposed externally

| *Performance*
| Smaller footprint, more efficient due to running directly on the host
| Higher overhead due to running full K3s clusters
| Low host-cluster footprint (control plane only); worker performance is native
|===

*Trade-offs:*

* *Isolation vs. Overhead:* The `shared` mode has lower overhead but weaker isolation, while the `virtual` mode provides stronger isolation but potentially higher overhead due to running full K3s clusters.

* *Resource Sharing:* The `shared` mode offers dynamic resource sharing within a namespace, which can be efficient but less predictable. The `virtual` mode provides dedicated resources to each virtual cluster, offering more control but requiring careful planning.

* *Managed control plane with real workers:* The `hcp` mode is the right choice when you need a real (non-virtualized) worker fleet -- for example bare-metal, edge, or VM-based workers -- but want K3k to manage the control plane lifecycle for you. It requires an externally reachable apiserver endpoint and is currently experimental.

For more information on how to choose the right mode, see xref:./how-tos-for-admin/choose-mode.adoc[Choose Mode].
